parscal-compiler_6_7_v3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ID
    NUMBER
    PACKED

Grammar

Rule 0     S' -> program
Rule 1     program -> program_head routine DOT
Rule 2     program_head -> PROGRAM NAME SEMI
Rule 3     routine -> routine_head routine_body
Rule 4     sub_routine -> routine
Rule 5     routine_head -> label_part const_part type_part var_part routine_part
Rule 6     label_part -> empty
Rule 7     empty -> <empty>
Rule 8     const_part -> CONST const_expr_list
Rule 9     const_part -> empty
Rule 10    const_expr_list -> const_expr_list const_expr
Rule 11    const_expr_list -> const_expr
Rule 12    const_expr -> NAME EQUAL const_value SEMI
Rule 13    const_value -> INTEGER
Rule 14    const_value -> REAL
Rule 15    const_value -> CHAR
Rule 16    const_value -> STRING
Rule 17    const_value -> SYS_CON
Rule 18    type_part -> TYPE type_decl_list
Rule 19    type_part -> empty
Rule 20    type_decl_list -> type_decl_list type_definition
Rule 21    type_decl_list -> type_definition
Rule 22    type_definition -> NAME EQUAL type_decl SEMI
Rule 23    type_decl -> simple_type_decl
Rule 24    type_decl -> array_type_decl
Rule 25    type_decl -> record_type_decl
Rule 26    simple_type_decl -> SYS_TYPE
Rule 27    simple_type_decl -> NAME
Rule 28    simple_type_decl -> LP name_list RP
Rule 29    simple_type_decl -> const_value DOTDOT const_value
Rule 30    array_type_decl -> ARRAY LB simple_type_decl RB OF type_decl
Rule 31    record_type_decl -> RECORD field_decl_list END
Rule 32    field_decl_list -> field_decl_list field_decl
Rule 33    field_decl_list -> field_decl
Rule 34    field_decl -> name_list COLON type_decl SEMI
Rule 35    name_list -> name_list COMMA NAME
Rule 36    name_list -> NAME
Rule 37    var_part -> VAR var_decl_list
Rule 38    var_part -> empty
Rule 39    var_decl_list -> var_decl_list var_decl
Rule 40    var_decl_list -> var_decl
Rule 41    var_decl -> name_list COLON type_decl SEMI
Rule 42    routine_part -> routine_part function_decl
Rule 43    routine_part -> routine_part procedure_decl
Rule 44    routine_part -> function_decl
Rule 45    routine_part -> procedure_decl
Rule 46    routine_part -> empty
Rule 47    function_decl -> function_head SEMI sub_routine SEMI
Rule 48    function_head -> FUNCTION NAME parameters COLON simple_type_decl
Rule 49    procedure_decl -> procedure_head SEMI sub_routine SEMI
Rule 50    procedure_head -> PROCEDURE NAME parameters
Rule 51    parameters -> LP para_decl_list RP
Rule 52    parameters -> empty
Rule 53    para_decl_list -> para_decl_list SEMI para_type_list
Rule 54    para_decl_list -> para_type_list
Rule 55    para_type_list -> var_para_list COLON simple_type_decl
Rule 56    para_type_list -> val_para_list COLON simple_type_decl
Rule 57    var_para_list -> VAR name_list
Rule 58    val_para_list -> name_list
Rule 59    routine_body -> compound_stmt
Rule 60    compound_stmt -> BEGIN stmt_list END
Rule 61    stmt_list -> stmt_list stmt SEMI
Rule 62    stmt_list -> empty
Rule 63    stmt -> INTEGER COLON non_label_stmt
Rule 64    stmt -> non_label_stmt
Rule 65    non_label_stmt -> assign_stmt
Rule 66    non_label_stmt -> proc_stmt
Rule 67    non_label_stmt -> compound_stmt
Rule 68    non_label_stmt -> if_stmt
Rule 69    non_label_stmt -> repeat_stmt
Rule 70    non_label_stmt -> while_stmt
Rule 71    non_label_stmt -> for_stmt
Rule 72    non_label_stmt -> case_stmt
Rule 73    non_label_stmt -> goto_stmt
Rule 74    assign_stmt -> NAME ASSIGN expression
Rule 75    assign_stmt -> NAME LB expression RB ASSIGN expression
Rule 76    assign_stmt -> NAME DOT NAME ASSIGN expression
Rule 77    proc_stmt -> NAME
Rule 78    proc_stmt -> NAME LP args_list RP
Rule 79    proc_stmt -> SYS_PROC
Rule 80    proc_stmt -> SYS_PROC LP expression_list RP
Rule 81    proc_stmt -> READ LP factor RP
Rule 82    if_stmt -> IF expression THEN stmt else_clause
Rule 83    else_clause -> ELSE stmt
Rule 84    else_clause -> empty
Rule 85    repeat_stmt -> REPEAT stmt_list UNTIL expression
Rule 86    while_stmt -> WHILE expression DO stmt
Rule 87    for_stmt -> FOR NAME ASSIGN expression direction expression DO stmt
Rule 88    direction -> TO
Rule 89    direction -> DOWNTO
Rule 90    case_stmt -> CASE expression OF case_expr_list END
Rule 91    case_expr_list -> case_expr_list case_expr
Rule 92    case_expr_list -> case_expr
Rule 93    case_expr -> const_value COLON stmt SEMI
Rule 94    case_expr -> NAME COLON stmt SEMI
Rule 95    goto_stmt -> GOTO INTEGER
Rule 96    expression_list -> expression_list COMMA expression
Rule 97    expression_list -> expression
Rule 98    expression -> expression GE expr
Rule 99    expression -> expression GT expr
Rule 100   expression -> expression LE expr
Rule 101   expression -> expression LT expr
Rule 102   expression -> expression EQUAL expr
Rule 103   expression -> expression UNEQUAL expr
Rule 104   expression -> expr
Rule 105   expr -> expr PLUS term
Rule 106   expr -> expr MINUS term
Rule 107   expr -> expr OR term
Rule 108   expr -> term
Rule 109   term -> term MUL factor
Rule 110   term -> term DIV factor
Rule 111   term -> term MOD factor
Rule 112   term -> term AND factor
Rule 113   term -> factor
Rule 114   factor -> SYS_FUNCT
Rule 115   factor -> SYS_FUNCT LP args_list RP
Rule 116   factor -> NAME LP args_list RP
Rule 117   factor -> NAME LB expression RB
Rule 118   factor -> NAME
Rule 119   factor -> const_value
Rule 120   factor -> NOT factor
Rule 121   factor -> MINUS factor
Rule 122   factor -> LP expression RP
Rule 123   factor -> NAME DOT NAME
Rule 124   args_list -> args_list COMMA expression
Rule 125   args_list -> expression

Terminals, with rules where they appear

AND                  : 112
ARRAY                : 30
ASSIGN               : 74 75 76 87
BEGIN                : 60
CASE                 : 90
CHAR                 : 15
COLON                : 34 41 48 55 56 63 93 94
COMMA                : 35 96 124
CONST                : 8
DIV                  : 110
DO                   : 86 87
DOT                  : 1 76 123
DOTDOT               : 29
DOWNTO               : 89
ELSE                 : 83
END                  : 31 60 90
EQUAL                : 12 22 102
FOR                  : 87
FUNCTION             : 48
GE                   : 98
GOTO                 : 95
GT                   : 99
ID                   : 
IF                   : 82
INTEGER              : 13 63 95
LB                   : 30 75 117
LE                   : 100
LP                   : 28 51 78 80 81 115 116 122
LT                   : 101
MINUS                : 106 121
MOD                  : 111
MUL                  : 109
NAME                 : 2 12 22 27 35 36 48 50 74 75 76 76 77 78 87 94 116 117 118 123 123
NOT                  : 120
NUMBER               : 
OF                   : 30 90
OR                   : 107
PACKED               : 
PLUS                 : 105
PROCEDURE            : 50
PROGRAM              : 2
RB                   : 30 75 117
READ                 : 81
REAL                 : 14
RECORD               : 31
REPEAT               : 85
RP                   : 28 51 78 80 81 115 116 122
SEMI                 : 2 12 22 34 41 47 47 49 49 53 61 93 94
STRING               : 16
SYS_CON              : 17
SYS_FUNCT            : 114 115
SYS_PROC             : 79 80
SYS_TYPE             : 26
THEN                 : 82
TO                   : 88
TYPE                 : 18
UNEQUAL              : 103
UNTIL                : 85
VAR                  : 37 57
WHILE                : 86
error                : 

Nonterminals, with rules where they appear

args_list            : 78 115 116 124
array_type_decl      : 24
assign_stmt          : 65
case_expr            : 91 92
case_expr_list       : 90 91
case_stmt            : 72
compound_stmt        : 59 67
const_expr           : 10 11
const_expr_list      : 8 10
const_part           : 5
const_value          : 12 29 29 93 119
direction            : 87
else_clause          : 82
empty                : 6 9 19 38 46 52 62 84
expr                 : 98 99 100 101 102 103 104 105 106 107
expression           : 74 75 75 76 82 85 86 87 87 90 96 97 98 99 100 101 102 103 117 122 124 125
expression_list      : 80 96
factor               : 81 109 110 111 112 113 120 121
field_decl           : 32 33
field_decl_list      : 31 32
for_stmt             : 71
function_decl        : 42 44
function_head        : 47
goto_stmt            : 73
if_stmt              : 68
label_part           : 5
name_list            : 28 34 35 41 57 58
non_label_stmt       : 63 64
para_decl_list       : 51 53
para_type_list       : 53 54
parameters           : 48 50
proc_stmt            : 66
procedure_decl       : 43 45
procedure_head       : 49
program              : 0
program_head         : 1
record_type_decl     : 25
repeat_stmt          : 69
routine              : 1 4
routine_body         : 3
routine_head         : 3
routine_part         : 5 42 43
simple_type_decl     : 23 30 48 55 56
stmt                 : 61 82 83 86 87 93 94
stmt_list            : 60 61 85
sub_routine          : 47 49
term                 : 105 106 107 108 109 110 111 112
type_decl            : 22 30 34 41
type_decl_list       : 18 20
type_definition      : 20 21
type_part            : 5
val_para_list        : 56
var_decl             : 39 40
var_decl_list        : 37 39
var_para_list        : 55
var_part             : 5
while_stmt           : 70

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_head routine DOT
    (2) program_head -> . PROGRAM NAME SEMI

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    program_head                   shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_head . routine DOT
    (3) routine -> . routine_head routine_body
    (5) routine_head -> . label_part const_part type_part var_part routine_part
    (6) label_part -> . empty
    (7) empty -> .

    CONST           reduce using rule 7 (empty -> .)
    TYPE            reduce using rule 7 (empty -> .)
    VAR             reduce using rule 7 (empty -> .)
    FUNCTION        reduce using rule 7 (empty -> .)
    PROCEDURE       reduce using rule 7 (empty -> .)
    BEGIN           reduce using rule 7 (empty -> .)

    routine                        shift and go to state 4
    routine_head                   shift and go to state 5
    label_part                     shift and go to state 6
    empty                          shift and go to state 7

state 3

    (2) program_head -> PROGRAM . NAME SEMI

    NAME            shift and go to state 8


state 4

    (1) program -> program_head routine . DOT

    DOT             shift and go to state 9


state 5

    (3) routine -> routine_head . routine_body
    (59) routine_body -> . compound_stmt
    (60) compound_stmt -> . BEGIN stmt_list END

    BEGIN           shift and go to state 12

    routine_body                   shift and go to state 10
    compound_stmt                  shift and go to state 11

state 6

    (5) routine_head -> label_part . const_part type_part var_part routine_part
    (8) const_part -> . CONST const_expr_list
    (9) const_part -> . empty
    (7) empty -> .

    CONST           shift and go to state 14
    TYPE            reduce using rule 7 (empty -> .)
    VAR             reduce using rule 7 (empty -> .)
    FUNCTION        reduce using rule 7 (empty -> .)
    PROCEDURE       reduce using rule 7 (empty -> .)
    BEGIN           reduce using rule 7 (empty -> .)

    const_part                     shift and go to state 13
    empty                          shift and go to state 15

state 7

    (6) label_part -> empty .

    CONST           reduce using rule 6 (label_part -> empty .)
    TYPE            reduce using rule 6 (label_part -> empty .)
    VAR             reduce using rule 6 (label_part -> empty .)
    FUNCTION        reduce using rule 6 (label_part -> empty .)
    PROCEDURE       reduce using rule 6 (label_part -> empty .)
    BEGIN           reduce using rule 6 (label_part -> empty .)


state 8

    (2) program_head -> PROGRAM NAME . SEMI

    SEMI            shift and go to state 16


state 9

    (1) program -> program_head routine DOT .

    $end            reduce using rule 1 (program -> program_head routine DOT .)


state 10

    (3) routine -> routine_head routine_body .

    DOT             reduce using rule 3 (routine -> routine_head routine_body .)
    SEMI            reduce using rule 3 (routine -> routine_head routine_body .)


state 11

    (59) routine_body -> compound_stmt .

    DOT             reduce using rule 59 (routine_body -> compound_stmt .)
    SEMI            reduce using rule 59 (routine_body -> compound_stmt .)


state 12

    (60) compound_stmt -> BEGIN . stmt_list END
    (61) stmt_list -> . stmt_list stmt SEMI
    (62) stmt_list -> . empty
    (7) empty -> .

    END             reduce using rule 7 (empty -> .)
    INTEGER         reduce using rule 7 (empty -> .)
    NAME            reduce using rule 7 (empty -> .)
    SYS_PROC        reduce using rule 7 (empty -> .)
    READ            reduce using rule 7 (empty -> .)
    BEGIN           reduce using rule 7 (empty -> .)
    IF              reduce using rule 7 (empty -> .)
    REPEAT          reduce using rule 7 (empty -> .)
    WHILE           reduce using rule 7 (empty -> .)
    FOR             reduce using rule 7 (empty -> .)
    CASE            reduce using rule 7 (empty -> .)
    GOTO            reduce using rule 7 (empty -> .)

    stmt_list                      shift and go to state 17
    empty                          shift and go to state 18

state 13

    (5) routine_head -> label_part const_part . type_part var_part routine_part
    (18) type_part -> . TYPE type_decl_list
    (19) type_part -> . empty
    (7) empty -> .

    TYPE            shift and go to state 20
    VAR             reduce using rule 7 (empty -> .)
    FUNCTION        reduce using rule 7 (empty -> .)
    PROCEDURE       reduce using rule 7 (empty -> .)
    BEGIN           reduce using rule 7 (empty -> .)

    type_part                      shift and go to state 19
    empty                          shift and go to state 21

state 14

    (8) const_part -> CONST . const_expr_list
    (10) const_expr_list -> . const_expr_list const_expr
    (11) const_expr_list -> . const_expr
    (12) const_expr -> . NAME EQUAL const_value SEMI

    NAME            shift and go to state 24

    const_expr_list                shift and go to state 22
    const_expr                     shift and go to state 23

state 15

    (9) const_part -> empty .

    TYPE            reduce using rule 9 (const_part -> empty .)
    VAR             reduce using rule 9 (const_part -> empty .)
    FUNCTION        reduce using rule 9 (const_part -> empty .)
    PROCEDURE       reduce using rule 9 (const_part -> empty .)
    BEGIN           reduce using rule 9 (const_part -> empty .)


state 16

    (2) program_head -> PROGRAM NAME SEMI .

    BEGIN           reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    CONST           reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    TYPE            reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    VAR             reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    FUNCTION        reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    PROCEDURE       reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)


state 17

    (60) compound_stmt -> BEGIN stmt_list . END
    (61) stmt_list -> stmt_list . stmt SEMI
    (63) stmt -> . INTEGER COLON non_label_stmt
    (64) stmt -> . non_label_stmt
    (65) non_label_stmt -> . assign_stmt
    (66) non_label_stmt -> . proc_stmt
    (67) non_label_stmt -> . compound_stmt
    (68) non_label_stmt -> . if_stmt
    (69) non_label_stmt -> . repeat_stmt
    (70) non_label_stmt -> . while_stmt
    (71) non_label_stmt -> . for_stmt
    (72) non_label_stmt -> . case_stmt
    (73) non_label_stmt -> . goto_stmt
    (74) assign_stmt -> . NAME ASSIGN expression
    (75) assign_stmt -> . NAME LB expression RB ASSIGN expression
    (76) assign_stmt -> . NAME DOT NAME ASSIGN expression
    (77) proc_stmt -> . NAME
    (78) proc_stmt -> . NAME LP args_list RP
    (79) proc_stmt -> . SYS_PROC
    (80) proc_stmt -> . SYS_PROC LP expression_list RP
    (81) proc_stmt -> . READ LP factor RP
    (60) compound_stmt -> . BEGIN stmt_list END
    (82) if_stmt -> . IF expression THEN stmt else_clause
    (85) repeat_stmt -> . REPEAT stmt_list UNTIL expression
    (86) while_stmt -> . WHILE expression DO stmt
    (87) for_stmt -> . FOR NAME ASSIGN expression direction expression DO stmt
    (90) case_stmt -> . CASE expression OF case_expr_list END
    (95) goto_stmt -> . GOTO INTEGER

    END             shift and go to state 25
    INTEGER         shift and go to state 27
    NAME            shift and go to state 38
    SYS_PROC        shift and go to state 39
    READ            shift and go to state 40
    BEGIN           shift and go to state 12
    IF              shift and go to state 41
    REPEAT          shift and go to state 42
    WHILE           shift and go to state 43
    FOR             shift and go to state 44
    CASE            shift and go to state 45
    GOTO            shift and go to state 46

    stmt                           shift and go to state 26
    non_label_stmt                 shift and go to state 28
    assign_stmt                    shift and go to state 29
    proc_stmt                      shift and go to state 30
    compound_stmt                  shift and go to state 31
    if_stmt                        shift and go to state 32
    repeat_stmt                    shift and go to state 33
    while_stmt                     shift and go to state 34
    for_stmt                       shift and go to state 35
    case_stmt                      shift and go to state 36
    goto_stmt                      shift and go to state 37

state 18

    (62) stmt_list -> empty .

    END             reduce using rule 62 (stmt_list -> empty .)
    INTEGER         reduce using rule 62 (stmt_list -> empty .)
    NAME            reduce using rule 62 (stmt_list -> empty .)
    SYS_PROC        reduce using rule 62 (stmt_list -> empty .)
    READ            reduce using rule 62 (stmt_list -> empty .)
    BEGIN           reduce using rule 62 (stmt_list -> empty .)
    IF              reduce using rule 62 (stmt_list -> empty .)
    REPEAT          reduce using rule 62 (stmt_list -> empty .)
    WHILE           reduce using rule 62 (stmt_list -> empty .)
    FOR             reduce using rule 62 (stmt_list -> empty .)
    CASE            reduce using rule 62 (stmt_list -> empty .)
    GOTO            reduce using rule 62 (stmt_list -> empty .)
    UNTIL           reduce using rule 62 (stmt_list -> empty .)


state 19

    (5) routine_head -> label_part const_part type_part . var_part routine_part
    (37) var_part -> . VAR var_decl_list
    (38) var_part -> . empty
    (7) empty -> .

    VAR             shift and go to state 48
    FUNCTION        reduce using rule 7 (empty -> .)
    PROCEDURE       reduce using rule 7 (empty -> .)
    BEGIN           reduce using rule 7 (empty -> .)

    var_part                       shift and go to state 47
    empty                          shift and go to state 49

state 20

    (18) type_part -> TYPE . type_decl_list
    (20) type_decl_list -> . type_decl_list type_definition
    (21) type_decl_list -> . type_definition
    (22) type_definition -> . NAME EQUAL type_decl SEMI

    NAME            shift and go to state 52

    type_decl_list                 shift and go to state 50
    type_definition                shift and go to state 51

state 21

    (19) type_part -> empty .

    VAR             reduce using rule 19 (type_part -> empty .)
    FUNCTION        reduce using rule 19 (type_part -> empty .)
    PROCEDURE       reduce using rule 19 (type_part -> empty .)
    BEGIN           reduce using rule 19 (type_part -> empty .)


state 22

    (8) const_part -> CONST const_expr_list .
    (10) const_expr_list -> const_expr_list . const_expr
    (12) const_expr -> . NAME EQUAL const_value SEMI

    TYPE            reduce using rule 8 (const_part -> CONST const_expr_list .)
    VAR             reduce using rule 8 (const_part -> CONST const_expr_list .)
    FUNCTION        reduce using rule 8 (const_part -> CONST const_expr_list .)
    PROCEDURE       reduce using rule 8 (const_part -> CONST const_expr_list .)
    BEGIN           reduce using rule 8 (const_part -> CONST const_expr_list .)
    NAME            shift and go to state 24

    const_expr                     shift and go to state 53

state 23

    (11) const_expr_list -> const_expr .

    NAME            reduce using rule 11 (const_expr_list -> const_expr .)
    TYPE            reduce using rule 11 (const_expr_list -> const_expr .)
    VAR             reduce using rule 11 (const_expr_list -> const_expr .)
    FUNCTION        reduce using rule 11 (const_expr_list -> const_expr .)
    PROCEDURE       reduce using rule 11 (const_expr_list -> const_expr .)
